--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "da58e7d2",
    "metadata": {},
    "outputs": [
@@ -1642,7 +1642,7 @@
        " (240.0, 'aprilmccoy', 'Kathleen Jenkins', 1)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1652,7 +1652,7 @@
     "\n",
     "SELECT\n",
     "    u.UserID, u.Username, u.FullName,\n",
-    "    COUNT(n.IsRead) AS total_unread_notifications\n",
+    "    COUNT(n.notificationID) AS total_unread_notifications\n",
     "FROM\n",
     "    users u\n",
     "INNER JOIN notifications n\n",
