--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -1666,9 +1666,545 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b98af759",
+   "metadata": {},
+   "source": [
+    "## 4. Scenario Q4\n",
+    "### Identify Most Liked Tweets\n",
+    "Find the top 5 tweets that have received the most likes, including their TweetID and\n",
+    "LikeCount. Also, retrieve the UserID, Username, and FullName of the users who\n",
+    "posted these tweets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2feb3355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>UserID</th>\n",
+       "        <th>Username</th>\n",
+       "        <th>FullName</th>\n",
+       "        <th>TweetID</th>\n",
+       "        <th>TweetText</th>\n",
+       "        <th>LikeCount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>305.0</td>\n",
+       "        <td>jason06</td>\n",
+       "        <td>Dennis Davis</td>\n",
+       "        <td>245.0</td>\n",
+       "        <td>Medical executive great fear much term rate establish. Soon air view Mrs attack room feeling involve. Decision character theory memory yes.<br>Tough win walk really discuss.<br>Choose nor exactly paper. House student play win popular member need floor.</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>100.0</td>\n",
+       "        <td>rmartin</td>\n",
+       "        <td>Jessica Carpenter</td>\n",
+       "        <td>73.0</td>\n",
+       "        <td>Everyone no garden evidence contain. Safe up include skin ahead cell cultural.<br>Tonight anything through skin dog near. Morning staff into keep third responsibility. Campaign heart radio others much.<br>Seek choose yet grow summer so certainly. Campaign agent form enough black.</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>372.0</td>\n",
+       "        <td>nortiz</td>\n",
+       "        <td>James Hernandez</td>\n",
+       "        <td>266.0</td>\n",
+       "        <td>New improve relationship all participant herself popular. Detail only strong color. Power and life hour her especially couple program.<br>Claim product edge. Soon according generation we sit.<br>Someone cell indicate because whose politics. Alone film successful fine prove these.</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>44.0</td>\n",
+       "        <td>mcmahonanna</td>\n",
+       "        <td>Morgan Jackson</td>\n",
+       "        <td>217.0</td>\n",
+       "        <td>Republican white stop catch senior.<br>What perform more budget rest produce. Back shake government card. Me must strong help health rate. Look name season material nothing.<br>Result never never spring still size pass human. Forward nature sing purpose.</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>491.0</td>\n",
+       "        <td>johnsonmonica</td>\n",
+       "        <td>Cheyenne Aguirre</td>\n",
+       "        <td>180.0</td>\n",
+       "        <td>Traditional spring operation community could our. Real approach many treatment.<br>Heart budget program particular half send operation window. Then phone character shake.</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(305.0, 'jason06', 'Dennis Davis', 245.0, 'Medical executive great fear much term rate establish. Soon air view Mrs attack room feeling involve. Decision character theory memory yes.\\nTough win walk really discuss.\\nChoose nor exactly paper. House student play win popular member need floor.', 5),\n",
+       " (100.0, 'rmartin', 'Jessica Carpenter', 73.0, 'Everyone no garden evidence contain. Safe up include skin ahead cell cultural.\\nTonight anything through skin dog near. Morning staff into keep third responsibility. Campaign heart radio others much.\\nSeek choose yet grow summer so certainly. Campaign agent form enough black.', 4),\n",
+       " (372.0, 'nortiz', 'James Hernandez', 266.0, 'New improve relationship all participant herself popular. Detail only strong color. Power and life hour her especially couple program.\\nClaim product edge. Soon according generation we sit.\\nSomeone cell indicate because whose politics. Alone film successful fine prove these.', 4),\n",
+       " (44.0, 'mcmahonanna', 'Morgan Jackson', 217.0, 'Republican white stop catch senior.\\nWhat perform more budget rest produce. Back shake government card. Me must strong help health rate. Look name season material nothing.\\nResult never never spring still size pass human. Forward nature sing purpose.', 4),\n",
+       " (491.0, 'johnsonmonica', 'Cheyenne Aguirre', 180.0, 'Traditional spring operation community could our. Real approach many treatment.\\nHeart budget program particular half send operation window. Then phone character shake.', 4)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT\n",
+    "    u.UserID, u.Username, u.FullName,\n",
+    "    t.TweetID, t.TweetText,\n",
+    "    COUNT(l.LikeID) AS LikeCount\n",
+    "FROM users u\n",
+    "INNER JOIN tweets t\n",
+    "ON u.UserID = t.UserID\n",
+    "INNER JOIN likes l\n",
+    "ON t.TweetID = l.TweetID\n",
+    "GROUP BY\n",
+    "    u.UserID, t.TweetID\n",
+    "ORDER BY\n",
+    "    LikeCount DESC\n",
+    "LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fd33540",
+   "metadata": {},
+   "source": [
+    "## 5. Scenario Q5\n",
+    "### Determine User Growth Over Time\n",
+    "Analyse the growth of users joining the platform over time. Retrieve the count of users\n",
+    "who joined each month and year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9cd2b463",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "61 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>month_join</th>\n",
+       "        <th>year_join</th>\n",
+       "        <th>number_of_users</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>12</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>7</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>11</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>12</td>\n",
+       "        <td>2019</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>7</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>11</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>12</td>\n",
+       "        <td>2020</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>7</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>11</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>12</td>\n",
+       "        <td>2021</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>7</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>11</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>12</td>\n",
+       "        <td>2022</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>7</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>2023</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(9, 2018, 2),\n",
+       " (10, 2018, 7),\n",
+       " (11, 2018, 9),\n",
+       " (12, 2018, 7),\n",
+       " (1, 2019, 12),\n",
+       " (2, 2019, 4),\n",
+       " (3, 2019, 14),\n",
+       " (4, 2019, 11),\n",
+       " (5, 2019, 6),\n",
+       " (6, 2019, 5),\n",
+       " (7, 2019, 8),\n",
+       " (8, 2019, 6),\n",
+       " (9, 2019, 4),\n",
+       " (10, 2019, 7),\n",
+       " (11, 2019, 10),\n",
+       " (12, 2019, 8),\n",
+       " (1, 2020, 6),\n",
+       " (2, 2020, 9),\n",
+       " (3, 2020, 9),\n",
+       " (4, 2020, 9),\n",
+       " (5, 2020, 5),\n",
+       " (6, 2020, 8),\n",
+       " (7, 2020, 9),\n",
+       " (8, 2020, 13),\n",
+       " (9, 2020, 10),\n",
+       " (10, 2020, 14),\n",
+       " (11, 2020, 10),\n",
+       " (12, 2020, 10),\n",
+       " (1, 2021, 7),\n",
+       " (2, 2021, 9),\n",
+       " (3, 2021, 7),\n",
+       " (4, 2021, 2),\n",
+       " (5, 2021, 10),\n",
+       " (6, 2021, 14),\n",
+       " (7, 2021, 11),\n",
+       " (8, 2021, 9),\n",
+       " (9, 2021, 9),\n",
+       " (10, 2021, 7),\n",
+       " (11, 2021, 10),\n",
+       " (12, 2021, 7),\n",
+       " (1, 2022, 8),\n",
+       " (2, 2022, 7),\n",
+       " (3, 2022, 6),\n",
+       " (4, 2022, 8),\n",
+       " (5, 2022, 10),\n",
+       " (6, 2022, 3),\n",
+       " (7, 2022, 1),\n",
+       " (8, 2022, 16),\n",
+       " (9, 2022, 5),\n",
+       " (10, 2022, 13),\n",
+       " (11, 2022, 7),\n",
+       " (12, 2022, 3),\n",
+       " (1, 2023, 10),\n",
+       " (2, 2023, 4),\n",
+       " (3, 2023, 12),\n",
+       " (4, 2023, 13),\n",
+       " (5, 2023, 14),\n",
+       " (6, 2023, 8),\n",
+       " (7, 2023, 5),\n",
+       " (8, 2023, 5),\n",
+       " (9, 2023, 8)]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    MONTH(JoinDate) AS month_join,\n",
+    "    YEAR(JoinDate) AS year_join,\n",
+    "    COUNT(UserID) AS number_of_users\n",
+    "FROM\n",
+    "    users\n",
+    "GROUP BY\n",
+    "    year_join, month_join\n",
+    "ORDER BY\n",
+    "    year_join ASC, month_join ASC;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98af759",
+   "id": "e65e29a4",
    "metadata": {},
    "outputs": [],
    "source": []
