--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -2202,9 +2202,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e65e29a4",
+   "metadata": {},
+   "source": [
+    "## 6. Scenario Q6\n",
+    "### Analyse Notification Engagement\n",
+    "Evaluate how users are engaging with notifications. Find the number of notifications\n",
+    "sent to users, the number of notifications read, and the read rate (percentage of\n",
+    "notifications read) for each NotificationType.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "7361bdba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>NotificationType</th>\n",
+       "        <th>total_notifications_sent</th>\n",
+       "        <th>read_notifications</th>\n",
+       "        <th>read_percentage</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Follow</td>\n",
+       "        <td>176</td>\n",
+       "        <td>85</td>\n",
+       "        <td>48.30%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Like</td>\n",
+       "        <td>167</td>\n",
+       "        <td>91</td>\n",
+       "        <td>54.49%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Comment</td>\n",
+       "        <td>157</td>\n",
+       "        <td>82</td>\n",
+       "        <td>52.23%</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Follow', 176, Decimal('85'), '48.30%'),\n",
+       " ('Like', 167, Decimal('91'), '54.49%'),\n",
+       " ('Comment', 157, Decimal('82'), '52.23%')]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    NotificationType,\n",
+    "    COUNT(NotificationID) AS total_notifications_sent,\n",
+    "    SUM(CASE WHEN IsRead = 1 THEN 1 ELSE 0 END) AS read_notifications,\n",
+    "    CONCAT(ROUND((SUM(CASE WHEN IsRead = 1 THEN 1 ELSE 0 END)/COUNT(NotificationID)) * 100, 2), '%') AS read_percentage\n",
+    "FROM\n",
+    "    notifications\n",
+    "GROUP BY\n",
+    "    NotificationType\n",
+    "ORDER BY\n",
+    "    total_notifications_sent DESC, read_notifications DESC, read_percentage DESC;\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65e29a4",
+   "id": "47cdc143",
    "metadata": {},
    "outputs": [],
    "source": []
