--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "96c5bb93",
    "metadata": {},
    "outputs": [
@@ -218,15 +218,9 @@
        "        <th>FollowerCount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>309.0</td>\n",
-       "        <td>hollandjoshua</td>\n",
-       "        <td>Angel Moreno</td>\n",
-       "        <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>335.0</td>\n",
-       "        <td>trivas</td>\n",
-       "        <td>Stacey Brown MD</td>\n",
+       "        <td>363.0</td>\n",
+       "        <td>evansimmons</td>\n",
+       "        <td>Brandon Mosley</td>\n",
        "        <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -236,28 +230,34 @@
        "        <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "        <td>335.0</td>\n",
+       "        <td>trivas</td>\n",
+       "        <td>Stacey Brown MD</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "        <td>95.0</td>\n",
        "        <td>ryanadams</td>\n",
        "        <td>Christopher Williams</td>\n",
        "        <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>363.0</td>\n",
-       "        <td>evansimmons</td>\n",
-       "        <td>Brandon Mosley</td>\n",
+       "        <td>456.0</td>\n",
+       "        <td>fclark</td>\n",
+       "        <td>Melinda Huynh</td>\n",
        "        <td>4</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(309.0, 'hollandjoshua', 'Angel Moreno', 4),\n",
-       " (335.0, 'trivas', 'Stacey Brown MD', 4),\n",
+       "[(363.0, 'evansimmons', 'Brandon Mosley', 4),\n",
        " (153.0, 'kanerussell', 'Kristen Wade', 4),\n",
+       " (335.0, 'trivas', 'Stacey Brown MD', 4),\n",
        " (95.0, 'ryanadams', 'Christopher Williams', 4),\n",
-       " (363.0, 'evansimmons', 'Brandon Mosley', 4)]"
+       " (456.0, 'fclark', 'Melinda Huynh', 4)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
     "\n",
     "SELECT\n",
     "    u.UserID, u.Username, u.FullName,\n",
-    "    COUNT(f.FollowerUserID) AS FollowerCount\n",
+    "    COUNT(f.FollowedUserID) AS FollowerCount\n",
     "FROM\n",
     "    users u\n",
     "INNER JOIN followers f\n",
@@ -2284,9 +2284,327 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2311a2cc",
+   "metadata": {},
+   "source": [
+    "## 7. Scenario Q7\n",
+    "### Identify Influential Users and Their Impact on User Engagement\n",
+    "Twitter is interested in identifying influential users on its platform to understand their\n",
+    "impact on user engagement. Influential users are characterized by a high number of\n",
+    "followers and frequent interactions (e.g., messages, likes, mentions, retweets). By\n",
+    "identifying these users, Twitter can analyze their content, engagement patterns, and\n",
+    "potentially leverage their influence for marketing and promotional activities.\n",
+    "Specific Tasks:\n",
+    "#### a. Identify Influential Users: Find the top 5 users with the most followers and list their\n",
+    "UserID, Username, FullName, and the number of followers.\n",
+    "#### b. Analyze User Engagement: For each of the identified influential users, calculate\n",
+    "their engagement on the platform by counting the number of messages sent,\n",
+    "tweets liked, mentions received, notifications received, and tweets retweeted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "e15702da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>UserID</th>\n",
+       "        <th>Username</th>\n",
+       "        <th>FullName</th>\n",
+       "        <th>NumberOfFollowers</th>\n",
+       "        <th>NumberOfMessagesSent</th>\n",
+       "        <th>TweetsLiked</th>\n",
+       "        <th>MentionsReceived</th>\n",
+       "        <th>NotificationsReceived</th>\n",
+       "        <th>TweetsRetweeted</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>220.0</td>\n",
+       "        <td>crystal20</td>\n",
+       "        <td>Julie Porter</td>\n",
+       "        <td>5</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2.0</td>\n",
+       "        <td>joseph66</td>\n",
+       "        <td>Sydney Taylor</td>\n",
+       "        <td>4</td>\n",
+       "        <td>0</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>0</td>\n",
+       "        <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>27.0</td>\n",
+       "        <td>vpierce</td>\n",
+       "        <td>Anne Lopez</td>\n",
+       "        <td>4</td>\n",
+       "        <td>2</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>0</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>31.0</td>\n",
+       "        <td>cgardner</td>\n",
+       "        <td>Jessica Hansen</td>\n",
+       "        <td>4</td>\n",
+       "        <td>3</td>\n",
+       "        <td>3</td>\n",
+       "        <td>2</td>\n",
+       "        <td>3</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>59.0</td>\n",
+       "        <td>laurasparks</td>\n",
+       "        <td>Jennifer Smith</td>\n",
+       "        <td>4</td>\n",
+       "        <td>0</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(220.0, 'crystal20', 'Julie Porter', 5, 1, 1, 0, 1, 5),\n",
+       " (2.0, 'joseph66', 'Sydney Taylor', 4, 0, 0, 1, 0, 2),\n",
+       " (27.0, 'vpierce', 'Anne Lopez', 4, 2, 0, 1, 0, 0),\n",
+       " (31.0, 'cgardner', 'Jessica Hansen', 4, 3, 3, 2, 3, 0),\n",
+       " (59.0, 'laurasparks', 'Jennifer Smith', 4, 0, 0, 1, 0, 1)]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "WITH TopFollowers AS (\n",
+    "    SELECT \n",
+    "        f.FollowedUserID AS UserID,\n",
+    "        COUNT(f.FollowerID) AS NumberOfFollowers\n",
+    "    FROM followers f\n",
+    "    GROUP BY f.FollowedUserID\n",
+    "    ORDER BY COUNT(f.FollowerID) DESC\n",
+    "    LIMIT 5\n",
+    ")\n",
+    "SELECT\n",
+    "    u.UserID,\n",
+    "    u.Username,\n",
+    "    u.FullName,\n",
+    "    tf.NumberOfFollowers,\n",
+    "    COUNT(DISTINCT m.MessageID) AS NumberOfMessagesSent,\n",
+    "    COUNT(DISTINCT l.LikeID) AS TweetsLiked,\n",
+    "    COUNT(DISTINCT men.MentionID) AS MentionsReceived,\n",
+    "    COUNT(DISTINCT n.NotificationID) AS NotificationsReceived,\n",
+    "    COUNT(DISTINCT r.RetweetID) AS TweetsRetweeted\n",
+    "FROM TopFollowers tf\n",
+    "JOIN users u ON u.UserID = tf.UserID\n",
+    "LEFT JOIN directmessages m ON u.UserID = m.SenderID\n",
+    "LEFT JOIN likes l ON u.UserID = l.UserID\n",
+    "LEFT JOIN mentions men ON u.UserID = men.UserID\n",
+    "LEFT JOIN notifications n ON u.UserID = n.UserID\n",
+    "LEFT JOIN retweets r ON u.UserID = r.UserID\n",
+    "GROUP BY u.UserID, u.Username, u.FullName, tf.NumberOfFollowers\n",
+    "ORDER BY tf.NumberOfFollowers DESC;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b233f8cf",
+   "metadata": {},
+   "source": [
+    "## 8. Scenario Q8\n",
+    "### Track User Retention and Platform Engagement Over Time\n",
+    "Twitter aims to enhance user experience and engagement on its platform to ensure\n",
+    "user retention. The company wants to analyse the activities of users who joined the\n",
+    "platform within the last year and assess their engagement levels to identify patterns\n",
+    "and areas for improvement.\n",
+    "Specific Tasks:\n",
+    "### a. User Retention Analysis: Determine the number of users who joined in the last year\n",
+    "and are still active on the platform, based on their engagement in various activities\n",
+    "(messages, likes, mentions, retweets) in the last month.\n",
+    "### b. Engagement Analysis: For the retained users, analyse the frequency of their\n",
+    "engagement in different activities on the platform."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47cdc143",
+   "id": "2e86ed63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>UserID</th>\n",
+       "        <th>Username</th>\n",
+       "        <th>FullName</th>\n",
+       "        <th>JoinDate</th>\n",
+       "        <th>MessagesSentLastMonth</th>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "# a. User Retention Analysis: Determine the number of users who joined in the last year\n",
+    "\n",
+    "CREATE VIEW RecentActiveUsers AS (\n",
+    "    SELECT\n",
+    "        u.UserID, u.Username, u.FullName, u.JoinDate,\n",
+    "        COUNT(m.MessageID) AS MessagesSentLastMonth \n",
+    "    FROM \n",
+    "        users u\n",
+    "    LEFT JOIN\n",
+    "        directmessages m\n",
+    "    ON u.UserID = m.SenderID\n",
+    "    WHERE\n",
+    "        u.JoinDate >= DATE_SUB(CURDATE(), INTERVAL 1 YEAR) AND\n",
+    "        (m.`Timestamp` >= DATE_SUB(CURDATE(), INTERVAL 1 MONTH))\n",
+    "    GROUP BY\n",
+    "        u.UserID, u.Username, u.FullName\n",
+    "    ORDER BY\n",
+    "        MessagesSentLastMonth DESC;\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "896e6454",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>UserID</th>\n",
+       "        <th>Username</th>\n",
+       "        <th>FullName</th>\n",
+       "        <th>JoinDate</th>\n",
+       "        <th>MessagesSentLastMonth</th>\n",
+       "        <th>likeMade</th>\n",
+       "        <th>MentionsMade</th>\n",
+       "        <th>NotificationMade</th>\n",
+       "        <th>RetweetMade</th>\n",
+       "        <th>TweetMade</th>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "# b. Engagement analysis: \n",
+    "\n",
+    "WITH RecentActiveUsers AS (\n",
+    "    SELECT\n",
+    "        u.UserID, u.Username, u.FullName, u.JoinDate,\n",
+    "        COUNT(m.MessageID) AS MessagesSentLastMonth \n",
+    "    FROM \n",
+    "        users u\n",
+    "    LEFT JOIN\n",
+    "        directmessages m\n",
+    "    ON u.UserID = m.SenderID\n",
+    "    WHERE\n",
+    "        u.JoinDate >= DATE_SUB(CURDATE(), INTERVAL 1 YEAR) AND\n",
+    "        (m.`Timestamp` >= DATE_SUB(CURDATE(), INTERVAL 1 MONTH))\n",
+    "    GROUP BY\n",
+    "        u.UserID, u.Username, u.FullName\n",
+    "    ORDER BY\n",
+    "        MessagesSentLastMonth DESC\n",
+    ")\n",
+    "\n",
+    "SELECT\n",
+    "    rau.UserID, rau.Username, rau.FullName, rau.JoinDate, rau.MessagesSentLastMonth,\n",
+    "    COUNT(l.UserID) AS likeMade,\n",
+    "    COUNT(men.MentionID) AS MentionsMade,\n",
+    "    COUNT(n.NotificationID) AS NotificationMade,\n",
+    "    COUNT(r.RetweetID) AS RetweetMade,\n",
+    "    COUNT(t.TweetID) AS TweetMade\n",
+    "FROM\n",
+    "    RecentActiveUsers rau\n",
+    "LEFT JOIN likes l\n",
+    "ON rau.UserID = l.UserID\n",
+    "LEFT JOIN mentions men\n",
+    "ON rau.UserID = men.MentionedUserID\n",
+    "LEFT JOIN notifications n\n",
+    "ON rau.UserID = n.UserID\n",
+    "LEFT JOIN retweets r\n",
+    "ON rau.UserID = r.UserID\n",
+    "LEFT JOIN tweets t\n",
+    "ON rau.UserID = t.UserID\n",
+    "GROUP BY\n",
+    "    rau.UserID, rau.Username, rau.FullName\n",
+    "ORDER BY\n",
+    "    rau.JoinDate ASC;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82c3c570",
    "metadata": {},
    "outputs": [],
    "source": []
