--- a/SQL/twitter_project/solution_analysis.ipynb
+++ b/SQL/twitter_project/solution_analysis.ipynb
@@ -2456,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "2e86ed63",
    "metadata": {},
    "outputs": [
@@ -2470,22 +2470,11 @@
     },
     {
      "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>UserID</th>\n",
-       "        <th>Username</th>\n",
-       "        <th>FullName</th>\n",
-       "        <th>JoinDate</th>\n",
-       "        <th>MessagesSentLastMonth</th>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
       "text/plain": [
        "[]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2509,13 +2498,13 @@
     "    GROUP BY\n",
     "        u.UserID, u.Username, u.FullName\n",
     "    ORDER BY\n",
-    "        MessagesSentLastMonth DESC;\n",
+    "        MessagesSentLastMonth DESC\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "id": "896e6454",
    "metadata": {},
    "outputs": [
@@ -2549,7 +2538,7 @@
        "[]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2557,24 +2546,6 @@
    "source": [
     "%%sql\n",
     "# b. Engagement analysis: \n",
-    "\n",
-    "WITH RecentActiveUsers AS (\n",
-    "    SELECT\n",
-    "        u.UserID, u.Username, u.FullName, u.JoinDate,\n",
-    "        COUNT(m.MessageID) AS MessagesSentLastMonth \n",
-    "    FROM \n",
-    "        users u\n",
-    "    LEFT JOIN\n",
-    "        directmessages m\n",
-    "    ON u.UserID = m.SenderID\n",
-    "    WHERE\n",
-    "        u.JoinDate >= DATE_SUB(CURDATE(), INTERVAL 1 YEAR) AND\n",
-    "        (m.`Timestamp` >= DATE_SUB(CURDATE(), INTERVAL 1 MONTH))\n",
-    "    GROUP BY\n",
-    "        u.UserID, u.Username, u.FullName\n",
-    "    ORDER BY\n",
-    "        MessagesSentLastMonth DESC\n",
-    ")\n",
     "\n",
     "SELECT\n",
     "    rau.UserID, rau.Username, rau.FullName, rau.JoinDate, rau.MessagesSentLastMonth,\n",
@@ -2602,9 +2573,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82c3c570",
+   "metadata": {},
+   "source": [
+    "## 9. Scenario Q9\n",
+    "### Analyse the Most Common Type of User Notifications\n",
+    "Twitter wants to understand which type of notifications users receive most frequently\n",
+    "to optimize user engagement and notification relevance. By analysing the most\n",
+    "common notification types, Twitter can tailor its notification system to enhance user\n",
+    "experience.\n",
+    "The task is to Identify the most common notification type received by users. Display\n",
+    "the NotificationType and the count of notifications for each type, ordered by the count\n",
+    "in descending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "8fa8b72d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/twitterdb\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>notificationtype</th>\n",
+       "        <th>NumberOfNotification</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Follow</td>\n",
+       "        <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Like</td>\n",
+       "        <td>167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Comment</td>\n",
+       "        <td>157</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Follow', 176), ('Like', 167), ('Comment', 157)]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    notificationtype,\n",
+    "    COUNT(notificationID) AS NumberOfNotification\n",
+    "FROM\n",
+    "    notifications\n",
+    "GROUP BY\n",
+    "    notificationtype\n",
+    "ORDER BY\n",
+    "    NumberOfNotification DESC;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82c3c570",
+   "id": "6f1f746b",
    "metadata": {},
    "outputs": [],
    "source": []
